Another tweak to avoid scrollbars.

--- a/frontend/public/game.html
+++ b/frontend/public/game.html
@@ -72,8 +72,8 @@ Clouds - Image by rawpixel.com
   });
 
   function resizeCanvas() {
-    myCanvas.width = window.innerWidth;
-    myCanvas.height = window.innerHeight - 20;
+    myCanvas.width = window.innerWidth - 50;
+    myCanvas.height = window.innerHeight - 50;
     SCREEN_WIDTH = myCanvas.width;
     SCREEN_HEIGHT = myCanvas.height;
     SCREEN_MIDDLE_X = SCREEN_WIDTH / 2;
