--- a/frontend/public/game.html
+++ b/frontend/public/game.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JPRZ7DLQ1C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JPRZ7DLQ1C');
+</script>
   <title>Aerial Combat</title>
   <link rel="icon" href="airplane_white.png">
 </head>
